@@ -1,3 +1,4 @@
+* Add format to phone numbers
 * Rename VAT Code into Tax Identifier
 * Add sequence order on Identifier
 * Add Replace Party wizard
